--- a/GUI/mainwindow.ui
+++ b/GUI/mainwindow.ui
@@ -20,14 +20,13 @@
      <x>0</x>
      <y>0</y>
      <width>619</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionNew"/>
     <addaction name="actionOpen"/>
     <addaction name="actionOpen_Video"/>
     <addaction name="actionOpen_Camera"/>
@@ -59,20 +58,15 @@
     </property>
     <addaction name="actionAbout"/>
    </widget>
-   <widget class="QMenu" name="menuEdit">
-    <property name="title">
-     <string>Edit</string>
-    </property>
-    <addaction name="actionUndo"/>
-    <addaction name="actionRedo"/>
-    <addaction name="actionHistory"/>
-   </widget>
    <widget class="QMenu" name="menuColors">
     <property name="title">
      <string>Colors</string>
     </property>
+    <addaction name="actionHistogram"/>
     <addaction name="actionHistogram_Equalization"/>
     <addaction name="actionInvert"/>
+    <addaction name="actionConvert_To_Grayscale"/>
+    <addaction name="actionConvert_to_Binary"/>
    </widget>
    <widget class="QMenu" name="menuTools">
     <property name="title">
@@ -86,9 +80,16 @@
      <addaction name="actionSURF"/>
      <addaction name="actionFAST"/>
      <addaction name="actionHarris"/>
+     <addaction name="actionMatch_Features"/>
     </widget>
     <addaction name="menuFeature_extraction"/>
     <addaction name="actionHough_transformation"/>
+    <addaction name="actionHough_Transformaton_Circles"/>
+    <addaction name="actionCamera_Calibration"/>
+    <addaction name="actionCompute_Fundamental_Matrix"/>
+    <addaction name="actionDraw_Epipolar_Lines"/>
+    <addaction name="actionCompute_Homography"/>
+    <addaction name="actionStitch_Images"/>
    </widget>
    <widget class="QMenu" name="menuFilters_2">
     <property name="title">
@@ -101,7 +102,6 @@
      <addaction name="actionMean"/>
      <addaction name="actionMedian"/>
      <addaction name="actionGaussian"/>
-     <addaction name="actionSet_Kernel_Size"/>
     </widget>
     <widget class="QMenu" name="menuEdge_Detection_2">
      <property name="title">
@@ -116,7 +116,7 @@
       <string>Noise</string>
      </property>
      <addaction name="actionSalt_and_Pepper"/>
-     <addaction name="actionUniform"/>
+     <addaction name="actionGaussian_noise"/>
     </widget>
     <widget class="QMenu" name="menuMorphology_2">
      <property name="title">
@@ -126,7 +126,6 @@
      <addaction name="actionErosion"/>
      <addaction name="actionOpening"/>
      <addaction name="actionClosing"/>
-     <addaction name="actionConvolution_Mask"/>
     </widget>
     <addaction name="menuBlur"/>
     <addaction name="menuEdge_Detection_2"/>
@@ -134,7 +133,6 @@
     <addaction name="menuMorphology_2"/>
    </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuEdit"/>
    <addaction name="menuImage"/>
    <addaction name="menuColors"/>
    <addaction name="menuTools"/>
@@ -160,7 +158,7 @@
   </action>
   <action name="actionSave_As">
    <property name="text">
-    <string>Save As</string>
+    <string>Save As..</string>
    </property>
   </action>
   <action name="actionClose">
@@ -179,33 +177,9 @@
     <string>Ctrl+X</string>
    </property>
   </action>
-  <action name="actionUndo">
-   <property name="text">
-    <string>Undo</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+Z</string>
-   </property>
-  </action>
-  <action name="actionRedo">
-   <property name="text">
-    <string>Redo</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+Y</string>
-   </property>
-  </action>
   <action name="actionAbout">
    <property name="text">
     <string>About</string>
-   </property>
-  </action>
-  <action name="actionHistory">
-   <property name="text">
-    <string>History..</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+H</string>
    </property>
   </action>
   <action name="actionFlip_Horizontally">
@@ -255,17 +229,12 @@
   </action>
   <action name="actionHough_transformation">
    <property name="text">
-    <string>Hough transformation</string>
+    <string>Hough Transformation(Lines)</string>
    </property>
   </action>
   <action name="actionInvert">
    <property name="text">
     <string>Invert</string>
-   </property>
-  </action>
-  <action name="actionOpen_Camera">
-   <property name="text">
-    <string>Open Camera</string>
    </property>
   </action>
   <action name="actionScale_Image">
@@ -275,12 +244,12 @@
   </action>
   <action name="actionMean">
    <property name="text">
-    <string>Mean</string>
+    <string>Mean..</string>
    </property>
   </action>
   <action name="actionMedian">
    <property name="text">
-    <string>Median</string>
+    <string>Median..</string>
    </property>
   </action>
   <action name="actionGaussian">
@@ -338,11 +307,6 @@
     <string>Convolution Mask..</string>
    </property>
   </action>
-  <action name="actionSet_Kernel_Size">
-   <property name="text">
-    <string>Set Kernel Size..</string>
-   </property>
-  </action>
   <action name="actionAdd_Logo">
    <property name="text">
     <string>Insert Logo..</string>
@@ -356,9 +320,72 @@
     <string>Ctrl+N</string>
    </property>
   </action>
+  <action name="actionCamera_Calibration">
+   <property name="text">
+    <string>Camera Calibration</string>
+   </property>
+  </action>
+  <action name="actionHistogram">
+   <property name="text">
+    <string>Histogram..</string>
+   </property>
+  </action>
   <action name="actionOpen_Video">
    <property name="text">
     <string>Open Video..</string>
+   </property>
+  </action>
+  <action name="actionConvert_To_Grayscale">
+   <property name="text">
+    <string>Convert Into Grayscale</string>
+   </property>
+   <property name="toolTip">
+    <string>Convert To Grayscale..</string>
+   </property>
+  </action>
+  <action name="actionHough_Transformaton_Circles">
+   <property name="text">
+    <string>Hough Transformaton(Circles)</string>
+   </property>
+  </action>
+  <action name="actionMatch_Features">
+   <property name="text">
+    <string>Match Features..</string>
+   </property>
+  </action>
+  <action name="actionCompute_Fundamental_Matrix">
+   <property name="text">
+    <string>Compute Fundamental Matrix..</string>
+   </property>
+  </action>
+  <action name="actionDraw_Epipolar_Lines">
+   <property name="text">
+    <string>Draw Epipolar Lines..</string>
+   </property>
+  </action>
+  <action name="actionCompute_Homography">
+   <property name="text">
+    <string>Compute Homography..</string>
+   </property>
+  </action>
+  <action name="actionStitch_Images">
+   <property name="text">
+    <string>Stitch Images..</string>
+   </property>
+  </action>
+  <action name="actionOpen_Camera">
+   <property name="text">
+    <string>Open Camera..</string>
+   </property>
+  </action>
+  <action name="actionGaussian_noise">
+   <property name="text">
+    <string>Gaussian..</string>
+   </property>
+  </action>
+  <action name="actionConvert_to_Binary">
+   <property name="text">
+    <string>Convert Into Binary..</string>
    </property>
   </action>
  </widget>
